# tutor-agent

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/agent/: attempt.py  events.py  prompt.py  pruning.py  runner.py
app/agent/subagents/: base.py  content.py  doubt.py  guidance.py
app/data/courses/4/: Important_questions.csv  chapterwise_test.csv  fulllength_test.csv  lecture_data.csv  ncert_solutions.csv  ppt_notes.csv  pyq_pdf.csv  toppers_notes.csv
app/data/courses/6/: curriculum.csv
app/gateway/: models.py  routes.py
app/llm/: base.py  openai_provider.py  retry.py
app/messages/: models.py
app/session/: compaction.py  dynamo_store.py  lock.py  manager.py  redis_store.py
app/tools/: fetch_coupons.py  fetch_subscription_plans.py  registry.py  resolve_chapter.py  search_important_questions.py  search_lectures.py  search_ncert_solutions.py  search_ppt_notes.py  search_pyq_papers.py  search_tests.py  search_topper_notes.py  token_service.py
docs/: v2-subagent-architecture.md
prompts/: system_prompt.txt  teacher_prompt.txt
prompts/courses/: 6.txt
prompts/deprecated/: system_prompt_v1.txt
prompts/subagents/: content_prompt.txt  doubt_prompt.txt  guidance_prompt.txt
